# biometric_talk_tdd_backend

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  setup.cfg
.github/workflows/: test.yaml
authentication/: authentication.py  models.py  serializers.py  urls.py  views.py
authentication/tests/: conftest.py  test_api.py
core/: settings.py
